--- a/package.json
+++ b/package.json
@@ -5,17 +5,29 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@raae/gatsby-remark-oembed": "^0.1.1",
+    "@svgr/webpack": "^4.3.3",
+    "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.15.9",
-    "gatsby-cli": "^2.8.12",
+    "gatsby-cli": "^2.8.13",
     "gatsby-image": "^2.2.17",
+    "gatsby-plugin-feed": "^2.3.22",
     "gatsby-plugin-manifest": "^2.2.14",
+    "gatsby-plugin-netlify": "^2.1.25",
+    "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-netlify-cms": "^4.1.13",
-    "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-react-helmet": "^3.1.6",
+    "gatsby-plugin-offline": "^3.0.22",
+    "gatsby-plugin-react-helmet": "^3.1.15",
+    "gatsby-plugin-resolve-src": "^2.0.0",
     "gatsby-plugin-sharp": "^2.2.20",
+    "gatsby-plugin-sitemap": "^2.2.21",
+    "gatsby-plugin-styled-components": "^3.1.13",
+    "gatsby-plugin-svgr": "^2.0.2",
+    "gatsby-plugin-transition-link": "^1.16.2",
     "gatsby-remark-copy-linked-files": "^2.1.30",
     "gatsby-remark-images": "^3.1.33",
     "gatsby-remark-relative-images": "^0.2.3",
+    "gatsby-remark-responsive-iframe": "^2.2.27",
     "gatsby-source-filesystem": "^2.1.21",
     "gatsby-transformer-remark": "^2.6.37",
     "gatsby-transformer-sharp": "^2.2.13",
@@ -23,7 +35,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
