--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@formatjs/intl-pluralrules": "^1.3.9",
+    "@formatjs/intl-relativetimeformat": "^4.5.1",
     "@raae/gatsby-remark-oembed": "^0.1.1",
     "@svgr/webpack": "^4.3.3",
     "babel-plugin-styled-components": "^1.10.6",
@@ -12,6 +14,7 @@
     "gatsby-cli": "^2.8.13",
     "gatsby-image": "^2.2.17",
     "gatsby-plugin-feed": "^2.3.22",
+    "gatsby-plugin-intl": "^0.3.2",
     "gatsby-plugin-manifest": "^2.2.14",
     "gatsby-plugin-netlify": "^2.1.25",
     "gatsby-plugin-netlify-cache": "^1.2.0",
@@ -32,14 +35,28 @@
     "gatsby-source-filesystem": "^2.1.21",
     "gatsby-transformer-remark": "^2.6.37",
     "gatsby-transformer-sharp": "^2.2.13",
+    "html-react-parser": "^0.10.0",
+    "intl": "^1.2.5",
     "netlify-cms-app": "^2.9.7",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
-    "styled-components": "^4.4.1"
+    "react-intl": "^3.9.1",
+    "styled-components": "^4.4.1",
+    "styled-icons": "^9.1.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.17.0",
+    "gatsby-plugin-eslint": "^2.0.8",
     "prettier": "^1.18.2"
   },
   "keywords": [
