--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-cli": "^2.8.13",
     "gatsby-image": "^2.2.17",
     "gatsby-plugin-feed": "^2.3.22",
+    "gatsby-plugin-google-analytics": "^2.1.31",
     "gatsby-plugin-intl": "^0.3.2",
     "gatsby-plugin-manifest": "^2.2.14",
     "gatsby-plugin-netlify": "^2.1.25",
@@ -41,6 +42,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-ga": "^2.7.0",
     "react-helmet": "^5.2.1",
     "react-intl": "^3.9.1",
     "styled-components": "^4.4.1",
