--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "netlify-cms-app": "^2.9.7",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.9.0",
     "react-ga": "^2.7.0",
     "react-helmet": "^5.2.1",
