--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-helmet": "^5.2.1",
     "react-intl": "^3.9.1",
     "styled-components": "^4.4.1",
-    "styled-icons": "^9.1.0"
+    "styled-icons": "^9.1.0",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
