add primsjs plugin

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "gatsby-plugin-transition-link": "^1.16.2",
     "gatsby-remark-copy-linked-files": "^2.1.30",
     "gatsby-remark-images": "^3.1.33",
-    "gatsby-remark-prismjs": "^3.3.25",
+    "gatsby-remark-prismjs": "^3.3.30",
     "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-remark-responsive-iframe": "^2.2.27",
     "gatsby-source-filesystem": "^2.1.21",
@@ -39,6 +39,7 @@
     "html-react-parser": "^0.10.0",
     "intl": "^1.2.5",
     "netlify-cms-app": "^2.9.7",
+    "prismjs": "^1.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-disqus-comments": "^1.4.0",
