--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   repo: jeftarmascarenhas/jeftarmascarenhas.io
   branch: master
 
-media_folder: static/assets/posts
+media_folder: static/assets/img
 public_folder: assets
 
 collections:
@@ -11,10 +11,10 @@ collections:
     label: Blog
     folder: content/posts
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     fields:
       - { name: date, label: Date, widget: date, format: YYYY-MM-DD hh:mm:ss }
       - { name: title, label: Title }
       - { name: description, label: Description, widget: string }
-      - { name: tags, label: Tags, widget: list, default: [""] }
+      - { name: tags, label: Tags, widget: list, default: [''] }
       - { name: body, label: Body, widget: markdown }
