change config img

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,7 +4,7 @@ backend:
   branch: master
 
 media_folder: static/assets/img
-public_folder: assets
+public_folder: assets/img
 
 collections:
   - name: blog
