change publish mode

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,7 +4,8 @@ backend:
   branch: master
 
 media_folder: static/assets/img
-public_folder: assets/img
+public_folder: /assets/img
+publish_mode: editorial_workflow
 
 collections:
   - name: blog
