--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-remark-responsive-iframe": "^2.2.27",
     "gatsby-source-filesystem": "^2.1.21",
+    "gatsby-transformer-json": "^2.2.25",
     "gatsby-transformer-remark": "^2.6.37",
     "gatsby-transformer-sharp": "^2.2.13",
     "html-react-parser": "^0.10.0",
