--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-cli": "^2.8.28",
     "gatsby-image": "^2.2.17",
     "gatsby-plugin-feed": "^2.3.22",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-analytics": "^2.1.31",
     "gatsby-plugin-intl": "^0.3.2",
     "gatsby-plugin-manifest": "^2.2.14",
