change config netlify

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,6 +21,7 @@ collections:
     fields:
       - { name: date, label: Date, widget: date, format: YYYY-MM-DD hh:mm:ss }
       - { name: title, label: Title }
+      - { name: slug, label: Slug }
       - { name: image, label: Cover, widget: image, required: false }
       - { name: description, label: Description, widget: string }
       - { name: tags, label: Tags, widget: list, default: [''] }
