--- a/package.json
+++ b/package.json
@@ -9,14 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@fontsource/inter": "^4.5.14",
+    "@hookform/resolvers": "^2.9.10",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "framer-motion": "^6",
+    "netlify-cms-app": "^2.15.72",
     "next": "13.0.5",
+    "next-seo": "^5.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.3"
+    "react-hook-form": "^7.41.0",
+    "react-icons": "^4.7.1",
+    "react-uuid": "^2.0.0",
+    "typescript": "4.9.3",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.0",
+    "sitemap": "^7.1.1"
   }
 }
