--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "date-fns": "^2.29.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "framer-motion": "^6",
+    "gray-matter": "^4.0.3",
     "netlify-cms-app": "^2.15.72",
     "next": "13.0.5",
     "next-seo": "^5.14.1",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
