--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11",
     "@fontsource/inter": "^4.5.14",
     "@hookform/resolvers": "^2.9.10",
+    "@openlab/vercel-netlify-cms-github": "^1.1.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
