--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "13.0.5",
     "framer-motion": "^6",
     "gray-matter": "^4.0.3",
+    "isomorphic-unfetch": "^4.0.2",
     "netlify-cms-app": "^2.15.72",
     "next": "13.0.5",
     "next-seo": "^5.14.1",
