--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@vercel/og": "^0.1.0",
     "date-fns": "^2.29.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "framer-motion": "^6",
+    "front-matter": "^4.0.2",
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^4.0.2",
+    "marked": "^4.2.12",
     "netlify-cms-app": "^2.15.72",
     "next": "13.0.5",
     "next-seo": "^5.14.1",
@@ -38,6 +41,8 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/marked": "^4.0.8",
+    "@types/prismjs": "^1.26.0",
     "prettier": "^2.8.0",
     "sitemap": "^7.1.1"
   }
