--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "netlify-cms-app": "^2.15.72",
     "next": "13.0.5",
     "next-seo": "^5.14.1",
+    "nextjs-progressbar": "^0.0.16",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
