--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.0.5",
     "framer-motion": "^6",
     "front-matter": "^4.0.2",
+    "globby": "^13.1.3",
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^4.0.2",
     "marked": "^4.2.12",
@@ -38,6 +39,7 @@
     "react-hook-form": "^7.41.0",
     "react-icons": "^4.7.1",
     "react-uuid": "^2.0.0",
+    "stream": "^0.0.2",
     "typescript": "4.9.3",
     "yup": "^0.32.11"
   },
