--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   repo: jeftarmascarenhas/jeftarmascarenhas.io
   base_url: https://jeftar.com.br/
   branch: main
-  auth_endpoint: api/auth/ # Essa rota vai ser muito importante mais para frente
+  auth_endpoint: api/auth # Essa rota vai ser muito importante mais para frente
 
 media_folder: public/assets/img
 public_folder: /assets/img
