--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.41.0",
     "react-icons": "^4.7.1",
     "react-uuid": "^2.0.0",
+    "simple-oauth2": "^5.0.0",
     "stream": "^0.0.2",
     "typescript": "4.9.3",
     "yup": "^0.32.11"
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@types/marked": "^4.0.8",
     "@types/prismjs": "^1.26.0",
+    "@types/simple-oauth2": "^5.0.4",
     "prettier": "^2.8.0",
     "sitemap": "^7.1.1"
   }
