--- a/package.json
+++ b/package.json
@@ -50,5 +50,10 @@
     "@types/simple-oauth2": "^5.0.4",
     "prettier": "^2.8.0",
     "sitemap": "^7.1.1"
+  },
+  "resolutions": {
+    "react": "^18.2.0",
+    "@types/react": "^18.0.17",
+    "react-dom": "^18.2.0"
   }
 }
