--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@vercel/og": "^0.1.0",
+    "axios": "^1.6.8",
     "date-fns": "^2.29.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
