fix: title pages

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,9 @@ YOUTUBE_V3_API_KEY=
 # BASE URL
 BASE_URL=http://localhost:3000
 
+# Stapi
+STRAPI_API_URL=http://vps52836.publiccloud.com.br/:1337
+MY_SITE_API_TOKEN=
+
 # Analytics
 NEXT_PUBLIC_GA_TRACKING=
